@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 2.01 Not Released
  - Fix indicating that user is offline in chat messages
+ - Improved user experience on the Settings page
 
 2.00 2019-11-23T10:23:35+0900
  - Add roles() and role() to Convos::Core::User #99 #407 #411
